platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_91.platter
start() {
  piece of a = ((1.2/6) + bill());
}